--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "framer-motion": "^10.12.16",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.9.0",
     "reactflow": "^11.7.0",
     "styled-components": "^6.0.0-rc.1",
     "zustand": "^4.3.8"
